fix: spacing between waybar modules, specifically power profile vs swayidle

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -85,6 +85,10 @@ tooltip label {
   font-size: 19px;
 }
 
+#custom-swayidle {
+  margin: 0px 8px 0 0;
+}
+
 #battery.good {
   color: #228b22;
 }
